app/assets/stylesheets/custom.scss
/* --- MIXINS, VARIABLES --- */

$navbar-item-img-max-height: 3.5rem;
$footer-background-color: white;
$box-shadow: none;


/* --- IMPORTS --- */

@import 'bulma';


/* --- UNIVERSAL --- */

textarea {
  resize: vertical;
}


/* --- TYPOGRAPHY --- */

body {
  font-family: Arial, sans-serif;
}

h1 {
  @extend .title;
  @extend .is-3;
  text-align: center;
}

h2 {
  @extend .subtitle;
  @extend .is-5;
  text-align: center;
}

p {
  line-height: 1.7em;
}

.election-section-heading {
  @extend .title;
  @extend .is-4;
  text-align: center;
}

.comparison-section-heading {
  @extend .title;
  @extend .is-4;
}


/* --- NAV BAR --- */

.navbar {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  border-bottom: 1px solid black
}

.navbar-item {
  font-size: 1.2em;
  padding: 0 1.5rem;
}


/* --- FOOTER --- */

footer {
  border-top: 1px solid black;
  
  .footer-item {
    padding: 0 1.5rem;
  }
}


/* --- DEVELOPER --- */

.debug_dump {
  width: 100%;
  margin-top: 15px;
}


/* --- FORMS --- */

select[multiple] {
  height: 200px;
}

#error-explanation {
  ul {
    color: red;
    margin: 0 0 30px 0;
  }
}

#session_remember_me {
  margin-right: 10px;
}

.button {
  margin: 10px 10px 10px 0;
  min-width: 10%;
}

.search-button {
  @extend .button;
  margin: 0;
}


/* --- GRID --- */

.show-grid-wrapper {
  display: grid;
  grid-template-areas: "grid-label grid-value";
  grid-auto-columns: fit-content(50%);
  row-gap: 1rem;
  column-gap: 2rem;
}

.grid-label {
  @extend .label;
}


/* --- FONT AWESOME --- */

.fab {
  color: black;
}


/* --- IMAGES --- */

.image.is-flag {
  max-width: 256px;
}

.image.is-flag-small {
  max-width: 128px;
}

